[package]
name = "endpointsecurity-rs"
version = "0.1.1"
edition = "2021"
description = "Safe Rust bindings for Endpoint Security API"
repository = "https://github.com/SubconsciousCompute/endpointsecurity-rs"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
block = "0.1.6"
crossbeam = "0.8.2"

[build-dependencies]
bindgen = "0.64.0"
